--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.ioiomint.pixelanimate"
-      android:versionCode="2"
-      android:versionName="1.0">
+      android:versionCode="11"
+      android:versionName="2.0">
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission> 
@@ -16,12 +16,17 @@
           <uses-library android:name="com.android.future.usb.accessory" android:required="false" />	     
           
            <activity android:name="SplashActivity"
+                  android:screenOrientation="portrait"
                   android:label="@string/app_name"
                   android:theme="@android:style/Theme.NoTitleBar">
+                  
                   <intent-filter>
+                                	
                         <action android:name="android.intent.action.MAIN" />
                         <category android:name="android.intent.category.LAUNCHER"/>
-                  </intent-filter>
+                 
+            		</intent-filter>
+               
             </activity>  
         
         
@@ -31,17 +36,15 @@
                    
             		
                       <intent-filter>
-                	<action android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED" />
+                		<action android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED" />
             		</intent-filter>
             
             		<meta-data android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED"
                                   android:resource="@xml/accessory_filter" />
-            		
-                   
           </activity>
           
-           <activity android:name=".preferences"></activity>
-         	 <activity android:name=".rescan"></activity>
+           <activity android:name=".preferences" android:screenOrientation="portrait" android:launchMode="singleTask"></activity>
+         	<activity android:name=".rescan" android:screenOrientation="portrait" android:launchMode="singleTask"></activity>
         
         
         
