--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.ioiomint.pixelanimate"
-      android:versionCode="11"
-      android:versionName="2.0">
+      android:versionCode="13"
+      android:versionName="2.1">
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission> 
@@ -15,7 +15,7 @@
         
           <uses-library android:name="com.android.future.usb.accessory" android:required="false" />	     
           
-           <activity android:name="SplashActivity"
+           <activity android:name="PixelAnimate"
                   android:screenOrientation="portrait"
                   android:label="@string/app_name"
                   android:theme="@android:style/Theme.NoTitleBar">
