--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.ioiomint.pixelanimate"
-      android:versionCode="13"
-      android:versionName="2.1">
+      android:versionCode="15"
+      android:versionName="2.3">
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission> 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     
     
     
